--- a/docs/usage/rtk-query/mutations.mdx
+++ b/docs/usage/rtk-query/mutations.mdx
@@ -38,16 +38,26 @@ const api = createApi({
       }),
       // Pick out data and prevent nested properties in a hook or selector
       transformResponse: (response: { data: Post }) => response.data,
-      // onStart, onSuccess, onError are useful for optimistic updates
-      // The 2nd parameter is the destructured `mutationApi`
-      onStart(
-        { id, ...patch },
-        { dispatch, getState, extra, requestId, context }
-      ) {},
-      // `result` is the server response
-      onSuccess({ id }, mutationApi, result) {},
-      onError({ id }, { dispatch, getState, extra, requestId, context }) {},
       invalidatesTags: ['Post'],
+      // onQuery is useful for optimistic updates
+      // The 2nd parameter is the destructured `MutationLifecycleApi`
+      async onQuery(
+        arg,
+        { dispatch, getState, resultPromise, requestId, extra, getCacheEntry }
+      ) {},
+      // The 2nd parameter is the destructured `MutationCacheLifecycleApi`
+      async onCacheEntryAdded(
+        arg,
+        {
+          dispatch,
+          getState,
+          extra,
+          requestId,
+          cleanup,
+          firstValueResolved,
+          getCacheEntry,
+        }
+      ) {},
       // highlight-end
     }),
   }),
@@ -55,7 +65,7 @@ const api = createApi({
 ```
 
 :::info
-Notice the `onStart`, `onSuccess`, `onError` methods? Be sure to check out how they can be used for [optimistic updates](./optimistic-updates)
+Notice the `onQuery` method? Be sure to check out how it can be used for [optimistic updates](./optimistic-updates)
 :::
 
 ### Type interfaces
@@ -72,29 +82,29 @@ export type MutationDefinition<
   type: DefinitionType.mutation
   invalidatesTags?: ResultDescription<TagTypes, ResultType, QueryArg>
   providesTags?: never
-  onStart?(arg: QueryArg, mutationApi: MutationApi<ReducerPath, Context>): void
-  onError?(
+  onQuery?(
     arg: QueryArg,
-    mutationApi: MutationApi<ReducerPath, Context>,
-    error: unknown,
-    meta: BaseQueryMeta<BaseQuery>
-  ): void
-  onSuccess?(
+    {
+      dispatch,
+      getState,
+      resultPromise,
+      requestId,
+      extra,
+      getCacheEntry,
+    }: MutationLifecycleApi
+  ): Promise<void>
+  onCacheEntryAdded?(
     arg: QueryArg,
-    mutationApi: MutationApi<ReducerPath, Context>,
-    result: ResultType,
-    meta: BaseQueryMeta<BaseQuery> | undefined
-  ): void
-}
-```
-
-```ts title="MutationApi" no-transpile
-export interface MutationApi<ReducerPath extends string, Context extends {}> {
-  dispatch: ThunkDispatch<any, any, AnyAction>
-  getState(): RootState<any, any, ReducerPath>
-  extra: unknown
-  requestId: string
-  context: Context
+    {
+      dispatch,
+      getState,
+      extra,
+      requestId,
+      cleanup,
+      firstValueResolved,
+      getCacheEntry,
+    }: MutationCacheLifecycleApi
+  ): Promise<void>
 }
 ```
 
@@ -171,7 +181,7 @@ export const postApi = createApi({
         result
           ? // successful query
             [
-              ...result.map(({ id }) => ({ type: 'Posts', id }) as const),
+              ...result.map(({ id }) => ({ type: 'Posts', id } as const)),
               { type: 'Posts', id: 'LIST' },
             ]
           : // an error occurred, but we still want to refetch this query when `{ type: 'Posts', id: 'LIST' }` is invalidated
@@ -228,9 +238,16 @@ export const {
 } = postApi
 ```
 
-<iframe src="https://codesandbox.io/embed/concepts-mutations-4d98s?fontsize=14&hidenavigation=1&module=%2Fsrc%2Fapp%2Fservices%2Fposts.ts&theme=dark"
-     style={{ width: '100%', height: '600px', border: 0, borderRadius: '4px', overflow: 'hidden' }}
-     title="RTK Query - Mutations Concept"
-     allow="geolocation; microphone; camera; midi; vr; accelerometer; gyroscope; payment; ambient-light-sensor; encrypted-media; usb" 
-     sandbox="allow-modals allow-forms allow-popups allow-scripts allow-same-origin"
+<iframe
+  src="https://codesandbox.io/embed/concepts-mutations-4d98s?fontsize=14&hidenavigation=1&module=%2Fsrc%2Fapp%2Fservices%2Fposts.ts&theme=dark"
+  style={{
+    width: '100%',
+    height: '600px',
+    border: 0,
+    borderRadius: '4px',
+    overflow: 'hidden',
+  }}
+  title="RTK Query - Mutations Concept"
+  allow="geolocation; microphone; camera; midi; vr; accelerometer; gyroscope; payment; ambient-light-sensor; encrypted-media; usb"
+  sandbox="allow-modals allow-forms allow-popups allow-scripts allow-same-origin"
 ></iframe>
