--- a/docs/usage/rtk-query/optimistic-updates.mdx
+++ b/docs/usage/rtk-query/optimistic-updates.mdx
@@ -11,10 +11,11 @@ When you're performing an update on some data that _already exists_ in the cache
 
 The core concepts are:
 
-- in the `onStart` phase of a mutation, you manually set the cached data via `updateQueryResult`
-- then, in `onError`, you roll it back via `patchQueryResult`. You don't have to worry about the `onSuccess` lifecycle here.
+- when you start a query or mutation, `onQuery` will be executed
+- you manually update the cached data by dispatching `api.util.updateQueryResult`
+- then, in the case that `promiseResult` rejects, you roll it back via the `.undo` property of the object you got back from the earlier dispatch.
 
-```ts title="Optimistic update mutation example"
+```ts title="Optimistic update mutation example (async await)"
 // file: types.ts noEmit
 export interface Post {
   id: number
@@ -41,22 +42,43 @@ const api = createApi({
         method: 'PATCH',
         body: patch,
       }),
-      onStart({ id, ...patch }, { dispatch, context }) {
-        // When we start the request, just immediately update the cache
-        context.undoPost = dispatch(
+      invalidatesTags: ['Post'],
+      // highlight-start
+      async onQuery({ id, ...patch }, { dispatch, resultPromise }) {
+        const patchResult = dispatch(
           api.util.updateQueryResult('getPost', id, (draft) => {
             Object.assign(draft, patch)
           })
-        ).inversePatches
+        )
+        try {
+          await resultPromise
+        } catch {
+          patchResult.undo()
+        }
       },
-      onError({ id }, { dispatch, context }) {
-        // If there is an error, roll it back
-        dispatch(api.util.patchQueryResult('getPost', id, context.undoPost))
-      },
-      invalidatesTags: ['Post'],
+      // highlight-end
     }),
   }),
 })
+```
+
+or, if you prefer the slighty shorter version with `.catch`
+
+```diff
+-      async onQuery({ id, ...patch }, { dispatch, resultPromise }) {
++      onQuery({ id, ...patch }, { dispatch, resultPromise }) {
+        const patchResult = dispatch(
+          api.util.updateQueryResult('getPost', id, (draft) => {
+            Object.assign(draft, patch)
+          })
+        )
+-       try {
+-         await resultPromise
+-       } catch {
+-         patchResult.undo()
+-       }
++       resultPromise.catch(patchResult.undo)
+      }
 ```
 
 ### Example
