--- a/docs/usage/rtk-query/cached-data.mdx
+++ b/docs/usage/rtk-query/cached-data.mdx
@@ -390,10 +390,10 @@ The matrix below shows examples of which invalidated tags will affect and invali
 <table>
   <thead>
     <tr>
-      <th class="diagonal-cell">
-        <div class="diagonal-cell--content">
-          <div class="diagonal-cell--topRight">Provided</div>
-          <div class="diagonal-cell--bottomLeft">Invalidated</div>
+      <th className="diagonal-cell">
+        <div className="diagonal-cell--content">
+          <div className="diagonal-cell--topRight">Provided</div>
+          <div className="diagonal-cell--bottomLeft">Invalidated</div>
         </div>
       </th>
       <th>
