--- a/docs/usage/rtk-query/streaming-updates.mdx
+++ b/docs/usage/rtk-query/streaming-updates.mdx
@@ -11,7 +11,7 @@ RTK Query gives you the ability to receive **streaming updates** for persistent 
 
 Streaming updates can be used to enable the API to receive real-time updates to the back-end data, such as new entries being created, or important properties being updated.
 
-To enable streaming updates for a query, pass the asynchronous `onCacheEntryAdded` function to the query, including the logic for how to update the query when streamed data is received.
+To enable streaming updates for a query, pass the asynchronous `onCacheEntryAdded` function to the query, including the logic for how to update the query when streamed data is received. See [anatomy of an endpoint](../../api/rtk-query/createApi#anatomy-of-an-endpoint) for more details.
 
 ## When to use streaming updates
 
@@ -61,8 +61,7 @@ export const api = createApi({
       // highlight-start
       async onCacheEntryAdded(
         arg,
-        { updateCacheEntry },
-        { firstValueResolved, cleanup }
+        { updateCacheEntry, firstValueResolved, cleanup }
       ) {
         // create a websocket connection when the cache subscription starts
         const ws = new WebSocket('ws://localhost:8080')
@@ -154,8 +153,7 @@ export const api = createApi({
       // highlight-end
       async onCacheEntryAdded(
         arg,
-        { updateCacheEntry },
-        { firstValueResolved, cleanup }
+        { updateCacheEntry, firstValueResolved, cleanup }
       ) {
         const ws = new WebSocket('ws://localhost:8080')
         try {
