--- a/docs/api/rtk-query/createApi.mdx
+++ b/docs/api/rtk-query/createApi.mdx
@@ -199,7 +199,7 @@ const api = createApi({
   endpoints: (build) => ({
     getPosts: build.query<PostsResponse, void>({
       query: () => 'posts',
-      provides: (result) =>
+      providesTags: (result) =>
         result ? result.map(({ id }) => ({ type: 'Posts', id })) : [],
     }),
     addPost: build.mutation<Post, Partial<Post>>({
@@ -208,7 +208,7 @@ const api = createApi({
         method: 'POST',
         body,
       }),
-      invalidates: ['Posts'],
+      invalidatesTags: ['Posts'],
     }),
   }),
 })
