--- a/docs/usage/rtk-query/error-handling.mdx
+++ b/docs/usage/rtk-query/error-handling.mdx
@@ -59,98 +59,9 @@ function PostsList() {
 
 ## Errors with a custom `baseQuery`
 
-By default, RTK Query expects you to `return` two possible objects:
+Whether a response is returned as `data` or `error` is dictated by the `baseQuery` provided.
 
-1.  ```ts title="Expected success result format" no-transpile
-    return { data: { first_name: 'Randy', last_name: 'Banana' };
-    ```
-2.  ```ts title="Expected error result format" no-transpile
-    return { error: { status: 500, data: { message: 'Failed because of reasons' } };
-    ```
-
-:::note
-This format is required so that RTK Query can infer the return types for your responses.
-:::
-
-As an example, this what a very basic axios-based `baseQuery` utility could look like:
-
-```ts title="Basic axios baseQuery"
-import { createApi, BaseQueryFn } from '@reduxjs/toolkit/query'
-import axios, { AxiosRequestConfig, AxiosError } from 'axios'
-
-const axiosBaseQuery = (
-  { baseUrl }: { baseUrl: string } = { baseUrl: '' }
-): BaseQueryFn<
-  {
-    url: string
-    method: AxiosRequestConfig['method']
-    data?: AxiosRequestConfig['data']
-  },
-  unknown,
-  unknown
-> => async ({ url, method, data }) => {
-  try {
-    const result = await axios({ url: baseUrl + url, method, data })
-    return { data: result.data }
-  } catch (axiosError) {
-    let err = axiosError as AxiosError
-    return { error: { status: err.response?.status, data: err.response?.data } }
-  }
-}
-
-const api = createApi({
-  baseQuery: axiosBaseQuery({
-    baseUrl: 'http://example.com',
-  }),
-  endpoints(build) {
-    return {
-      query: build.query({ query: () => ({ url: '/query', method: 'get' }) }),
-      mutation: build.mutation({
-        query: () => ({ url: '/mutation', method: 'post' }),
-      }),
-    }
-  },
-})
-```
-
-Ultimately, you can choose whatever library you prefer to use with your `baseQuery`, but it's important that you return the correct response format. If you haven't tried [`fetchBaseQuery`](../../api/rtk-query/fetchBaseQuery) yet, give it a chance!
-
-## Retrying on Error
-
-RTK Query exports a utility called `retry` that you can wrap the `baseQuery` in your API definition with. It defaults to 5 attempts with a basic exponential backoff.
-
-The default behavior would retry at these intervals:
-
-[remarks](docblock://query/retry.ts?token=defaultBackoff)
-
-[examples](docblock://query/retry.ts?token=retry)
-
-In the event that you didn't want to retry on a specific endpoint, you can just set `maxRetries: 0`.
-
-:::info
-It is possible for a hook to return `data` and `error` at the same time. By default, RTK Query will keep whatever the last 'good' result was in `data` until it can be updated or garbage collected.
-:::
-
-## Bailing out of errors
-
-`retry.fail`
-
-```ts title="TODO" no-transpile
-baseBaseQuery.mockImplementation((input) => {
-  retry.fail(error)
-  return { data: `this won't happen` }
-})
-
-const baseQuery = retry(baseBaseQuery)
-const api = createApi({
-  baseQuery,
-  endpoints: (build) => ({
-    q1: build.query({
-      query: () => {},
-    }),
-  }),
-})
-```
+Ultimately, you can choose whatever library you prefer to use with your `baseQuery`, but it's important that you return the correct response format. If you haven't tried [`fetchBaseQuery`](../../api/rtk-query/fetchBaseQuery) yet, give it a chance! Otherwise, see [Customizing Queries](./customizing-queries) for information on how to alter the returned errors.
 
 ## Handling errors at a macro level
 
